--- a/mainStyle.css
+++ b/mainStyle.css
@@ -15,10 +15,17 @@ html, body{
 .container{
     margin-bottom: 15px;
     margin-top: 15px;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 100vh; /* Full viewport height */
 }
 
-.meat{
-     background-color:#ffffff;
+.content{
+    background-color:#ffffff;
+    color: #1F2125;
+    max-width: 720px;
+    width: 1080px; /* Example width */
 }
 
 
@@ -29,37 +36,20 @@ html, body{
 .navlink:hover{
     color: #A2BFE6;
 }
-#faq{
-    background-color: #1A1C23;
-    color: white;
-    padding: 20px;
-    margin-bottom: 20px;
-    
-}
-#stuff{
-    background-color:  #A2BFE6;
-    margin-bottom: 20px;
-    padding: 20px;
-}
+
 
 #insetPhoto{
     width: 97%;
     padding: 5px;
 }
 
-h3 a {
+a {
     color: #1F2125;
 }
-h3 a {
+a:hover {
     color:#0051B8;
 }
 
-p a {
-    color: #1F2125;
-}
-p a:hover{
-    color:#0051B8;
-}
 
 .brdr{
     border: solid;
