--- a/mainStyle.css
+++ b/mainStyle.css
@@ -3,7 +3,6 @@ header{
     color: white;
 }
 
-
 #title{
    padding: 3px;
    padding-left: 15px;
@@ -58,5 +57,6 @@ a:hover {
 }
 
 #jumbo{
-    width: 100%;
+    height: 50vh;
+
 }
